--- a/backend/package.json
+++ b/backend/package.json
@@ -10,9 +10,10 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.1",
+    "express-validator": "^6.14.2",
     "mongoose": "^6.4.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.18"
+    "nodemon": "^1.3.3"
   }
 }
